--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -4,83 +4,86 @@
     ViewData["MetaDescription"] = "More details about SailScores";
 }
 
+<div class="col-lg-9">
+    <h1 class="h2">Sailing scoring kept simple.</h1>
+    <p>
+        SailScores makes publishing sail race results simple and
+        fast: simple enough that the scores can be entered and shared
+        from a phone on the water. Competitors and clubs should be able to view scores
+        in many ways from many devices, and see trends and specifics.
+    </p>
+    <br />
+    <h3>It's free</h3>
+    <p>
+        You can host your club's scores on this site. Fill out <a asp-controller="ClubRequest" asp-action="index">the form</a>
+        for the initial club setup.
+    </p>
+    <p>
+        If you'd rather provide your own servers, SailScores is open-source software. The
+        code is available at
+        <a href="https://github.com/SailScores/SailScores">https://github.com/SailScores/SailScores</a>.
+        You are welcome to run your own instance of this. We'll provide
+        support as time allows.
+    </p>
+    <br />
+    <h4>What's the catch?</h4>
+    <p>
+        <em>Why is SailScores free? What about "If you're not paying for a service, you are the product."?</em>
+    </p>
+    <p>
+        The expense to host this site is less than $20 a month.
+        Development time is a more significant contribution, but it is happily donated:
+        score entry troubles are reduced, the growth of sailing is supported and technologies are learned.
+    </p>
+    <p>
+        Some day, some features may require more resources or payment to other services (such as
+        speech recognition or automatic weather recording.) When that becomes an issue
+        we'll find a way to only charge the users of the "Premium" features.
+    </p>
+    <p>
+        We are committed to providing a free option regardless. Our clubs
+        haven't had large budgets and would have benefited from SailScores. We'd
+        like to share.
+    </p>
+    <p>
+        By the way, SailScores doesn't share any tracking or cookies with third-parties. Your
+        data is not being sold by SailScores. See our thorough
+        <a asp-controller="Home" asp-action="Privacy">Privacy Policy</a> for more information.
+    </p>
+    <br />
+    <h3>Future</h3>
+    We're working on new features, including:
+    <ul>
+        <li>Integration with social media, such as automatic posting of results to Twitter.</li>
+        <li>Additional analysis for competitors in different conditions.</li>
+        <li>More import and export options to integrate with existing scoring software.</li>
+        <li>Deeper trend reporting for clubs: Are your races growing year over year?</li>
+        <li>
+            More options for result entry: let's keep making result entry simpler and faster.
+            We've got even more ideas for this...
+        </li>
+    </ul>
+    <p>View a list of issues and feature requests at <a href="https://github.com/SailScores/SailScores/issues">GitHub</a></p>
+    <br />
+    <h3>Feedback</h3>
+    <p>
+        <em>Please send feedback!</em> Use the email addresses below, reach out on Twitter @@SailScores or via Github.
+    </p>
 
-<h1 class="h2">Sailing scoring kept simple.</h1>
-<p>
-    SailScores makes publishing sail race results simple and
-    fast: simple enough that the scores can be entered and shared
-    from a phone on the water. Competitors and clubs should be able to view scores
-    in many ways from many devices, and see trends and specifics.
-</p>
-<br />
-<h3>It's free</h3>
-<p>
-    You can host your club's scores on this site. Fill out <a asp-controller="ClubRequest" asp-action="index">the form</a>
-    for the initial club setup.
-</p>
-<p>
-    If you'd rather provide your own servers, SailScores is open-source software. The
-    code is available at
-    <a href="https://github.com/SailScores/SailScores">https://github.com/SailScores/SailScores</a>.
-    You are welcome to run your own instance of this. We'll provide
-    support as time allows.
-</p>
-<br />
-<h4>What's the catch?</h4>
-<p>
-    <em>Why is SailScores free? What about "If you're not paying for a service, you are the product."?</em>
-</p>
-<p>
-    The expense to host this site is less than $20 a month.
-    Development time is a more significant contribution, but it is happily donated:
-    score entry troubles are reduced, the growth of sailing is supported and technologies are learned.
-</p>
-<p>
-    Some day, some features may require more resources or payment to other services (such as
-    speech recognition or automatic weather recording.) When that becomes an issue
-    we'll find a way to only charge the users of the "Premium" features.
-</p>
-<p>
-    We are committed to providing a free option regardless. Our clubs
-    haven't had large budgets and would have benefitted from SailScores. We'd
-    like to share.
-</p>
-<p>
-    By the way, SailScores doesn't share any tracking or cookies with third-parties. Your
-    data is not being sold by SailScores. See our thorough
-    <a asp-controller="Home" asp-action="Privacy">Privacy Policy</a> for more information.
-</p>
-<br />
-<h3>Future</h3>
-We're working on new features, including:
-<ul>
-    <li>Integration with social media, such as automatic posting of results to Twitter.</li>
-    <li>Additional analysis for competitors in different conditions.</li>
-    <li>More import and export options to integrate with existing scoring software.</li>
-    <li>Deeper trend reporting for clubs: Are your races growing year over year?</li>
-    <li>More options for result entry: let's keep making result entry simpler and faster.
-        We've got even more ideas for this...</li>
-</ul>
-<p>View a list of issues and feature requests at <a href="https://github.com/SailScores/SailScores/issues">GitHub</a></p>
-<br />
-<h3>Feedback</h3>
-<p>
-    <em>Please send feedback!</em> Use the email addresses below, reach out on Twitter @@SailScores or via Github.
-</p>
+    <br />
+    <h3>Contact Info</h3>
+    SailScores is maintained by Jamie Fraser, <a href="mailto:jamie@widernets.com">jamie@widernets.com</a>,
+    <address>
+        <a href="mailto:info@sailscores.com">info@sailscores.com</a><br />
+    </address>
+    <br />
 
-<br />
-<h3>Contact Info</h3>
-Sailscores is maintained by Jamie Fraser, <a href="mailto:jamie@widernets.com">jamie@widernets.com</a>,
-<address>
-    <a href="mailto:info@sailscores.com">info@sailscores.com</a><br />
-</address>
-<br />
-
-<p>
-    <small>
-        <code>
-            src <a href="https://github.com/SailScores/SailScores/commit/@Model.GitHash">@Model.ShortGitHash</a>
-            build <a href="https://dev.azure.com/SailScores/SailScoresWebApp/_build/results?buildId=@Model.BuildId&view=results">@Model.BuildNumber</a>
-        </code>
-    </small>
-</p>
+    <p>
+        <small>
+            <code>
+                src <a href="https://github.com/SailScores/SailScores/commit/@Model.GitHash">@Model.ShortGitHash</a>
+                build <a href="https://dev.azure.com/SailScores/SailScoresWebApp/_build/results?buildId=@Model.BuildId&view=results">@Model.BuildNumber</a>
+            </code>
+        </small>
+    </p>
+</div>
