--- a/SailScores.Web/Views/Shared/_Layout.cshtml
+++ b/SailScores.Web/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
     </header>
 
     <div class="container-lg body-content">
-        <main class="col-12 py-md-3 pl-md-5 bd-content" role="main">
+        <main class="col-12 bd-content" role="main">
             @RenderBody()
         </main>
         <hr />
