Better default widths

--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -62,9 +62,9 @@
             </li>
             <li>Shareable direct links to club, series, and regatta pages.</li>
             <li>Competitor statistics across multiple series.</li>
-            <li>Count a single race in one or many series.</li>
+            <li>Count a single race in multiple series.</li>
             <li>Automatically collect and share weather information.</li>
-            <li>Smartphone, MacOS, and Windows friendly.</li>
+            <li>Phone friendly.</li>
         </ul>
     </div>
 
