--- a/SailScores.Web/Views/Shared/_WideLayout.cshtml
+++ b/SailScores.Web/Views/Shared/_WideLayout.cshtml
@@ -65,54 +65,51 @@
 </head>
 <body>
     <header class="bg-dark">
-        <div class="container-sm py-0">
-            <nav class="navbar navbar-expand-md navbar-dark bg-dark p-0">
-                <a asp-area="" asp-controller="Club" asp-action="Index"
-                   asp-route-clubInitials="@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()"
-                   class="navbar-brand">@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark py-0">
+            <a asp-area="" asp-controller="Club" asp-action="Index"
+               asp-route-clubInitials="@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()"
+               class="navbar-brand">@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a asp-area=""
-                               asp-controller="Series"
-                               asp-action="Index"
-                               asp-route-clubInitials="@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()"
-                               class="nav-link">
-                                @localizer["Series"]
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a asp-area=""
-                               asp-controller="Race"
-                               asp-action="Index"
-                               asp-route-clubInitials="@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()"
-                               class="nav-link">
-                                @localizer["Races"]
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a asp-area=""
-                               asp-controller="Regatta"
-                               asp-action="Index"
-                               asp-route-clubInitials="@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()"
-                               class="nav-link">
-                                @localizer["Regattas"]
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav navbar-right">
-                        <li class="nav-item"><a href="~/" class="nav-link navbar-brand">SailScores</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a asp-area=""
+                           asp-controller="Series"
+                           asp-action="Index"
+                           asp-route-clubInitials="@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()"
+                           class="nav-link">
+                            @localizer["Series"]
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-area=""
+                           asp-controller="Race"
+                           asp-action="Index"
+                           asp-route-clubInitials="@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()"
+                           class="nav-link">
+                            @localizer["Races"]
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-area=""
+                           asp-controller="Regatta"
+                           asp-action="Index"
+                           asp-route-clubInitials="@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()"
+                           class="nav-link">
+                            @localizer["Regattas"]
+                        </a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav navbar-right">
+                    <li class="nav-item"><a href="~/" class="nav-link navbar-brand">SailScores</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
-
-    <div class="container body-content">
+    <div class="container-fluid body-content">
         <div class="row">
             @if (IsSectionDefined("Sidebar"))
             {
@@ -157,32 +154,32 @@
         <script src="https://cdn.jsdelivr.net/npm/jquery-ajax-unobtrusive@3.2.6/dist/jquery.unobtrusive-ajax.min.js" integrity="sha256-PAC000yuHt78nszJ2RO0OiDMu/uLzPLRlYTk8J3AO10=" crossorigin="anonymous"></script>
     </environment>
 
-    <script type="text/javascript">
-        /* First CSS File */
-        var deferredStyleOne = document.createElement('link');
-        deferredStyleOne.rel = 'stylesheet';
-        deferredStyleOne.href = '/css/weather-icons.min.css';
-        deferredStyleOne.type = 'text/css';
-        var godefer = document.getElementsByTagName('link')[0];
-        godefer.parentNode.insertBefore(deferredStyleOne, godefer);
+<script type="text/javascript">
+    /* First CSS File */
+    var deferredStyleOne = document.createElement('link');
+    deferredStyleOne.rel = 'stylesheet';
+    deferredStyleOne.href = '/css/weather-icons.min.css';
+    deferredStyleOne.type = 'text/css';
+    var godefer = document.getElementsByTagName('link')[0];
+    godefer.parentNode.insertBefore(deferredStyleOne, godefer);
 
-        /* Second CSS File */
-        var deferredStyleTwo = document.createElement('link');
-        deferredStyleTwo.rel = 'stylesheet';
-        deferredStyleTwo.href = '/css/weather-icons-wind.min.css';
-        deferredStyleTwo.type = 'text/css';
-        var godefer2 = document.getElementsByTagName('link')[0];
-        godefer2.parentNode.insertBefore(deferredStyleTwo, godefer2);
+/* Second CSS File */
+    var deferredStyleTwo = document.createElement('link');
+    deferredStyleTwo.rel = 'stylesheet';
+    deferredStyleTwo.href = '/css/weather-icons-wind.min.css';
+    deferredStyleTwo.type = 'text/css';
+    var godefer2 = document.getElementsByTagName('link')[0];
+    godefer2.parentNode.insertBefore(deferredStyleTwo, godefer2);
 
-        /* Another CSS File */
-        var deferredStyleThree = document.createElement('link');
-        deferredStyleThree.rel = 'stylesheet';
-        deferredStyleThree.href = 'https://use.fontawesome.com/releases/v5.6.3/css/all.css';
-        deferredStyleThree.type = 'text/css';
-        var godefer2 = document.getElementsByTagName('link')[0];
-        godefer2.parentNode.insertBefore(deferredStyleThree, godefer2);
-    </script>
+    /* Another CSS File */
+    var deferredStyleThree = document.createElement('link');
+    deferredStyleThree.rel = 'stylesheet';
+    deferredStyleThree.href = 'https://use.fontawesome.com/releases/v5.6.3/css/all.css';
+    deferredStyleThree.type = 'text/css';
+    var godefer2 = document.getElementsByTagName('link')[0];
+    godefer2.parentNode.insertBefore(deferredStyleThree, godefer2);
+</script>
 
-    @RenderSection("Scripts", required: false)
+@RenderSection("Scripts", required: false)
 </body>
 </html>
